<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RechercheRvActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Saisissez un mois et une année" />

    <Spinner
        android:id="@+id/spMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:contentDescription="@string/mois"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spAnnee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/annee"
        android:minHeight="48dp" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirmer"
        android:text="@string/valider"
        tools:ignore="OnClick,UsingOnClickInXml" />


</LinearLayout>